# Tetrix

./: .gitignore  Application.cpp  CMakeLists.txt  README.md  run.sh
demo/: Tetrix.cpp  run.sh
resources/shaders/: Grid.glsl  Tetromino.glsl
src/: ErrorHandler.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
src/game/: GLAlgorithms.cpp  Grid.cpp  Tetromino.cpp
src/game/includes/: GLAlgorithms.h  Grid.h  Tetromino.h
src/graphics/: ErrorHandler.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexBuffer.cpp
src/graphics/includes/: IndexBuffer.h  VertexArray.h  VertexBuffer.h
src/includes/: ErrorHandler.h  IndexBuffer.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
